--- a/homework/templates/index.html
+++ b/homework/templates/index.html
@@ -60,7 +60,7 @@
 
     <div>
 
-      <label for="fname">bedrooms:</label> <br>
+      <label for="fname">Bedrooms:</label> <br>
       <input type="text" id="bedrooms" name="bedrooms" value="3"><br><br>
 
       <label for="fname">Bathrooms:</label> <br>
